examples/test/testpolicy15902.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15902
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key23: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value32
          key23: value29
          key25: value9
      podSelector:
        matchLabels:
          key31: value33
          key7: value39
          key34: value6
